fix: finalize Jakarta migration for client samples